// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

=====================================output=====================================
// @flow

================================================================================
`;

exports[`foo.js 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');

=====================================output=====================================
// @flow
require("./bar");

================================================================================
`;
